--- a/Wyklady/stasikowka2024/pojedynek-na-bloki.tex
+++ b/Wyklady/stasikowka2024/pojedynek-na-bloki.tex
@@ -2,10 +2,10 @@
 \usepackage{import}
 \import{../../lib}{bridge.sty}
 
-\newcommand{\green}{\color{Cerulean}Zielone all\color{black}}
-\newcommand{\red}{\color{Salmon}Czerwone all\color{black}}
-\newcommand{\korz}{\color{LimeGreen}Korzystne\color{black}}
-\newcommand{\nkorz}{\color{WildStrawberry}Niekorzystne\color{black}}
+\newcommand{\green}{Zielone all\color{black}}
+\newcommand{\red}{Czerwone all\color{black}}
+\newcommand{\korz}{Korzystne\color{black}}
+\newcommand{\nkorz}{Niekorzystne\color{black}}
 
 \newcommand{\first}{1\textsuperscript{st}}
 \newcommand{\second}{2\textsuperscript{nd}}
