new bidding stuff

--- a/KrysiaBartek2024/others/BBOchallenge_15may2024.tex
+++ b/KrysiaBartek2024/others/BBOchallenge_15may2024.tex
@@ -27,13 +27,9 @@
 \end{table}
 
 Wist 3\spades. As kier stać musi. Przydałby się też impas karo. Wygrywamy przy podziale kar 3-3
-lub impasie trefl. Czy wygrywamy przy podziale trefli 3-3, jeśli impas trefl nie stoi?
-
-%Jeśli as kier nie stoi to oddajemy 4 lewy w kierach i \textit{coś jeszcze}, więc
-% zakładamy, że stoi. Teraz wygrywamy przy stojącym królu karo i jednym z: podział kar 3-3,
-% podział trefli 3-3, impas trefl. Nie możemy sprawdzić wszystkich tych szans, 
-% jeśli kara nie dzielą się, przeciwnik może wyjść w pika pozbawiając nas jedynego dojścia 
-% do stołu (a potrzebujemy jeszcze zaimpasować króla trefl i asa kier).
+lub impasie trefl. Podział trefli 3-3, jeśli impas trefl nie stoi i kara się nie dzielą, zwykle nie
+wystarczy. Możemy zagrać w drugiej lewie impas karo i trefla do małego, lub małe karo z obu rąk,
+przeciwnicy ściągną kiery, zaimpasujemy karo, sprawdzimy kara 3-3 i impas trefl.
 
 \vspace{0.2cm}
 
@@ -101,6 +97,43 @@ E trzyma kiery i karo, musi więc pozbyć się pika (bezpiecznego wyjścia):
 \textbf{{\color{red}p}{\color{orange}r}{\color{LimeGreen}z}{\color{cyan}y}{\color{blue}m}{\color{purple}u}{\color{red}s}}
 \textbf{{\color{red}w}{\color{orange}p}{\color{LimeGreen}u}{\color{cyan}s}{\color{blue}t}{\color{purple}k}{\color{red}o}{\color{orange}w}{\color{LimeGreen}y}}.
 Gramy kiera, wpuszczając \nvul{W}.
+
+\newpage
+8.
+
+\handdiagramv{\vhand{K6}{QT854}{T5}{T962}}
+        {\vhand{J}{962}{K8762}{Q873}}
+        {\vhand{AT87542}{K3}{AQ}{A4}}
+        {\vhand{Q93}{AJ7}{J943}{KJ5}}
+        {}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \nvul{W} & \nvul{N} & \nvul {E} & \nvul{S} \\
+        1\diams & \pass & 3\diams & 4\spades \\
+        all \pass & & & \\
+    \end{tabular}
+\end{table}
+
+Wist: 5\clubs, \nvul {E}\ zabija 9\clubs damą.
+Będziemy potencjalnie potrzebować przejścia do stołu.
+Ściągnięcie 2 górnych pików nas go pozbawi 
+(obrońcy przepuszczą pierwszego kiera). 
+W drugiej lewie wychodzimy K\hearts, \nvul{W}\
+zabija asem i gra 2 górne trefle, wyrabiając nam
+T\clubs. Ostatnie wyjście w trefla przebijamy, gramy 2 górne
+piki kończąc w stole i wyrzucamy Q\diams na trefla.
+
+Jeśli \nvul{W}\ zamiast wyrabiać nam trefle
+wyjdzie 7\hearts, zabijemy damą,
+następnie ściągmy 2 górne piki i zaimpasujemy karo.
+
+Jeśli \nvul{W}\ nie weźmie K\hearts, wychodzimy 
+ponownie w kiera. Później możemy wyrzucić
+Q\diams na Q\hearts. Jeśli \nvul {E}\ ma AJxx\hearts
+i tak nic nie dało się zrobić (ale prawdopodobnie
+zalicytowałby wtedy 1\hearts zamiast 3\diams).
 
 \newpage
 10.
