--- a/KrysiaBartek2024/source/preempts_v2.tex
+++ b/KrysiaBartek2024/source/preempts_v2.tex
@@ -2,13 +2,18 @@
 \usepackage{import}
 
 \import{../../lib/}{bridge.sty}
+\setmainlanguage{english}
 
-\title{New Bidding Stuff}
-\author{Krystyna Gasińska}
+\title{Responding to partner's preempt}
+\author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
-\section{\major preempts}
+%%% ID: 48
+%%% PRIORITY: 105
+%%% SECTION: oneside
+%%% TITLE: Preempt opening
+%%% SYSTEM BEGIN %%%
 
 \subsubsection*{2\hearts -- ?}
 \begin{itemize}
@@ -137,136 +142,7 @@
     \item other = agreeing \clubs
 \end{itemize}
 
-\section{1\nt opening}
+%%% SYSTEM END %%%
 
-\subsubsection*{1\nt -- 2\clubs\\
-                ?}
-\begin{itemize}
-    \item 2\nt = 6+\minor with AK or 3+ honors
-    \item 3\minor = other 6+\minor, \nf
-\end{itemize}
-
-\subsubsection*{1\nt -- 2\clubs\\
-                2\nt -- ?}
-\begin{itemize}
-    \item 3\clubs = \pass/correct
-    \item 3\diams = ask 3\major
-    \item 3\hearts = ask shortness
-    \item 3\spades = \then 3\nt
-    \item 3\nt = show minor (\then 4\nt to play, other agreeing)
-\end{itemize}
-
-\subsubsection*{1\nt -- 2\clubs\\
-                2\nt -- 3\diams\\
-                ?}
-\begin{itemize}
-    \item 3\hearts = 3\hearts (cue = agreeing)
-    \item 3\spades = 3\spades (cue = agreeing)
-    \item 3\nt = no 3\major
-    \item 4\clubs = 33(61)
-\end{itemize}
-
-\subsubsection*{1\nt -- 2\clubs\\
-                2\nt -- 3\diams\\
-                4\clubs -- ?}
-\begin{itemize}
-    \item 4\diams = \then 4\hearts (forces 4\hearts bid)
-    \item 4\hearts = agreeing \spades
-    \item 4\spades = to play
-\end{itemize}
-
-\subsubsection*{1\nt -- 2\clubs\\
-                2\nt -- 3\hearts\\
-                ?}
-\begin{itemize}
-    \item 3\spades = 6+\clubs, no \diams shortness
-    \item 3\nt = 6+\diams, no \clubs shortness
-    \item 4\clubs = 6+\clubs, \diams shortness
-    \item 4\diams = 6+\diams, \clubs shortness
-\end{itemize}
-
-\section{Gazilli}
-
-\subsubsection*{1\hearts -- 1\spades\\
-                2\clubs -- 2\hearts\\
-                ?}
-\begin{itemize}
-    \item 2\spades = 3+\spades, \nf
-    \item 2\nt = \gf
-    \item 3\minor = 4+\minor, \nf, 18.5+
-    \item 3\hearts = 6+\hearts, \inv
-\end{itemize}
-
-\subsubsection*{1\hearts -- 1\spades\\
-                2\clubs -- 2\hearts\\
-                2\spades -- ?}
-\begin{itemize}
-    \item 2\nt = \gf
-    \item 3\minor = \gf
-    \item 3\hearts = \nf
-    \item 3\spades = 5+\spades, \nf (bid forced)
-\end{itemize}
-
-\subsubsection*{1\hearts -- 1\spades\\
-                2\clubs -- 2\hearts\\
-                3\minor -- ?}
-\begin{itemize}
-    \item 3\diams = \then 3\nt
-    \item 3\nt = \gf
-    \item 3\hearts/3\spades/4\minor = \nf
-\end{itemize}
-
-\section{Other}
-
-\subsubsection*{1\clubs -- ?}
-\begin{itemize}
-    \item 4\clubs = 5+\hearts5+\spades
-    \item 4\diams = \then 4\hearts
-    \item 4\hearts = \then 4\spades
-\end{itemize}
-
-\subsubsection*{1\clubs -- 1\hearts
-                1\spades -- 2\diams\\
-                ?}
-\begin{itemize}
-    \item 2\spades = 5\clubs4\spades (then 3\spades = 65)
-    \item 3\clubs = 6\clubs4\spades
-\end{itemize}
-
-\subsubsection*{(1\minor) -- 1\hearts -- (P) -- ?}
-\begin{itemize}
-    \item 3\minor = mixed raise
-\end{itemize}
-
-\subsubsection*{(1\anysuit{x}) -- 1\anysuit{y} -- (2\anysuit{x}) -- ?}
-\begin{itemize}
-    \item 2\nt = fit, \invp
-    \item 3\anysuit{x} = mixed raise
-    \item 3\anysuit{y} = preemptive
-\end{itemize}
-
-\subsubsection*{1\diams -- 1\hearts\\
-                ?}
-\begin{itemize}
-    \item 3\clubs = \gf
-\end{itemize}
-
-\subsubsection*{1\diams -- (1\spades) -- \dbl -- (3\spades)\\
-                \dbl -- (P) -- ?}
-\begin{itemize}
-    \item 4\minor = \forc
-\end{itemize}
-
-\subsubsection*{(1\diams) -- 1\spades -- (3\diams) -- ?}
-\begin{itemize}
-    \item 3\hearts = \nf
-\end{itemize}
-
-\subsubsection*{1\hearts -- 2\hearts\\
-                2\nt -- 3\spades\\
-                4\clubs}
-2\nt = \invp, \spades
-3\spades = accept, 4+\spades
-4\clubs = agreeing \spades, cue
 
 \end{document}
