--- a/KrysiaBartek2024/source/preempts_v2.tex
+++ b/KrysiaBartek2024/source/preempts_v2.tex
@@ -20,7 +20,7 @@
     \item 2\spades = \lsf
     \item 2\nt = ask \nt features
     \item 3\clubs = \minor, \gf
-    \item 3\diams = 6+\spades, \invp \vimp
+    \item 3\diams = (5)6+\spades, \invp \vimp
     \item 3\spades = \spades, \inv, \nf
     \item 3\hearts/3\nt/4\major/5\minor = to play
     \item 4\clubs = RKCB
@@ -88,7 +88,7 @@
 \begin{itemize}
     \item 2\nt = ask \nt features
     \item 3\clubs = \lsf
-    \item 3\diams = 6+\hearts, \invp \vimp
+    \item 3\diams = (5)6+\hearts, \invp \vimp
     \item 3\hearts = \minor, \gf
     \item 3\spades/3\nt/4\major/5\minor = to play
     \item 4\clubs = RKCB
