--- a/KrysiaBartek2024/source/preempts_v2.tex
+++ b/KrysiaBartek2024/source/preempts_v2.tex
@@ -5,7 +5,8 @@
 \setmainlanguage{english}
 
 \title{Responding to partner's preempt}
-\author{Krystyna Gasińska, Bartek Słupik}
+\author{Krysia Gasińska, Bartek Słupik\\
+        \textsc{KACPER KUFLOWSKI GIGA CHAD INSPIRED}}
 \begin{document}
 \maketitle
 
