--- a/KrysiaBartek2024/source/2over1.tex
+++ b/KrysiaBartek2024/source/2over1.tex
@@ -15,6 +15,9 @@
 %%% TITLE: 2/1 \gf
 %%% SYSTEM BEGIN %%%
 
+After 2/1 bid, up to 3 level, we only bid our shape (not strength).
+Then, unserious bids are used to balance.
+
 \subsubsection*{\anysuit{x} -- 2\anysuit{y} \\ ?}
 \begin{itemize}
     \item 2\nt = 5332 or 5422, denies 4-card support
