--- a/KrysiaBartek2024/source/minorPuppet.tex
+++ b/KrysiaBartek2024/source/minorPuppet.tex
@@ -4,7 +4,7 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{2\nt opening -- extended}
+\title{2\nt opening -- Minor Puppet Stayman}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
@@ -12,7 +12,7 @@
 %%% ID: 26
 %%% PRIORITY: 83
 %%% SECTION: oneside
-%%% TITLE: 2\ntx\ opening -- extended
+%%% TITLE: Minor Puppet Stayman
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{2\nt -- 3\clubs\\
@@ -35,6 +35,8 @@
     \item 4\clubs = Minor Puppet Stayman
     \item 4\diams = Minor Puppet, ask 3s
 \end{itemize}
+
+All above rules apply also after 1\nt -- 3\clubs sequence.
 
 \subsubsection*{2\nt -- 3\diams\\
                 3\hearts -- ?}
