--- a/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
@@ -4,21 +4,18 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Dealing with opponent's overcall: 1\clubs opening}
+\title{1\clubs\ opening: dealing with opponent's overcall}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% ID: 44
-%%% PRIORITY: 73
+%%% PRIORITY: 70
 %%% SECTION: competitive
-%%% TITLE: Dealing with opponent's overcall: 1\clubs\ opening
+%%% TITLE: 1\clubs\ opening: dealing with opponent's overcall
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{1\clubs -- (\dbl) -- ?}
-\begin{itemize}
-    \item 
-\end{itemize}
+TODO
 
 %%% SYSTEM END %%%
 
