--- a/KrysiaBartek2024/source/oppsOvercallTfx1d.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1d.tex
@@ -4,21 +4,18 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Dealing with opponent's overcall: 1\diams opening}
+\title{1\diams\ opening: dealing with opponent's overcall}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% ID: 45
-%%% PRIORITY: 74
+%%% PRIORITY: 72
 %%% SECTION: competitive
-%%% TITLE: Dealing with opponent's overcall: 1\diams\ opening
+%%% TITLE: 1\diams\ opening: dealing with opponent's overcall
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{1\diams -- (\dbl) -- ?}
-\begin{itemize}
-    \item 
-\end{itemize}
+TODO
 
 %%% SYSTEM END %%%
 
