--- a/KrysiaBartek2024/source/oppsOvercallTfx1h.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1h.tex
@@ -4,113 +4,115 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Dealing with opponent's overcall: 1\hearts opening}
+\title{1\hearts\ opening: dealing with opponent's overcall}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% ID: 46
-%%% PRIORITY: 75
+%%% PRIORITY: 74
 %%% SECTION: competitive
-%%% TITLE: Dealing with opponent's overcall: 1\hearts\ opening
+%%% TITLE: 1\hearts\ opening: dealing with opponent's overcall
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{1\hearts -- (1\spades) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 1\nt = \clubs
-    \item 2\clubs = \diams
-    \item 2\diams = constructive raise
-    \item 2\hearts = weak raise (4-6)
+TODO
+
+% \subsubsection*{1\hearts -- (1\spades) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 1\nt = \clubs
+%     \item 2\clubs = \diams
+%     \item 2\diams = constructive raise
+%     \item 2\hearts = weak raise (4-6)
     
 
-\end{itemize}
+% \end{itemize}
 
-\subsubsection*{1\hearts -- (1\nt) -- ?}
-\begin{itemize}
-    \item \dbl = 10+, penalty
-    \item 2\clubs/2\diams/2\hearts/2\spades = \nat, \nf
-    \item 2\nt = \minor
-    \item 3\clubs = \inv + fit
-    \item 3\diams = mixed raise
-    \item 3\hearts/4\clubs/4\diams = \nat + fit
-\end{itemize}
+% \subsubsection*{1\hearts -- (1\nt) -- ?}
+% \begin{itemize}
+%     \item \dbl = 10+, penalty
+%     \item 2\clubs/2\diams/2\hearts/2\spades = \nat, \nf
+%     \item 2\nt = \minor
+%     \item 3\clubs = \inv + fit
+%     \item 3\diams = mixed raise
+%     \item 3\hearts/4\clubs/4\diams = \nat + fit
+% \end{itemize}
 
-\subsubsection*{1\spades -- (2\clubs) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 2\diams/2\hearts = \fonce
-    \item 2\spades = 6-10
-    \item 2\nt = \gf + fit
-    \item 3\clubs = \inv + fit
-    \item 3\diams = mixed raise
-    \item 3\hearts = \hearts + fit, \inv
-    \item 3\spades = pre
-    \item 4\clubs = splinter
-    \item 4\diams/4\hearts = \nat + fit
-\end{itemize}
+% \subsubsection*{1\spades -- (2\clubs) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 2\diams/2\hearts = \fonce
+%     \item 2\spades = 6-10
+%     \item 2\nt = \gf + fit
+%     \item 3\clubs = \inv + fit
+%     \item 3\diams = mixed raise
+%     \item 3\hearts = \hearts + fit, \inv
+%     \item 3\spades = pre
+%     \item 4\clubs = splinter
+%     \item 4\diams/4\hearts = \nat + fit
+% \end{itemize}
 
-\subsubsection*{1\spades -- (2\diams) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 2\hearts = \fonce
-    \item 2\spades = 6-10
-    \item 2\nt = \clubs \invp
-    \item 3\clubs = \gf + fit
-    \item 3\diams = \inv + fit
-    \item 3\hearts = mixed raise
-    \item 3\spades = pre
-    \item 4\clubs/4\hearts = \nat + fit
-    \item 4\diams = splinter
-\end{itemize}
+% \subsubsection*{1\spades -- (2\diams) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 2\hearts = \fonce
+%     \item 2\spades = 6-10
+%     \item 2\nt = \clubs \invp
+%     \item 3\clubs = \gf + fit
+%     \item 3\diams = \inv + fit
+%     \item 3\hearts = mixed raise
+%     \item 3\spades = pre
+%     \item 4\clubs/4\hearts = \nat + fit
+%     \item 4\diams = splinter
+% \end{itemize}
 
-\subsubsection*{1\spades -- (2\hearts) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 2\spades = 6-10
-    \item 2\nt = \clubs \invp
-    \item 3\clubs = \diams \invp
-    \item 3\diams = \spades, \gf
-    \item 3\hearts = \spades, \inv
-    \item 3\spades = pre
-    \item 4\clubs/4\diams = \nat + fit
-    \item 4\hearts = splinter
-\end{itemize}
+% \subsubsection*{1\spades -- (2\hearts) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 2\spades = 6-10
+%     \item 2\nt = \clubs \invp
+%     \item 3\clubs = \diams \invp
+%     \item 3\diams = \spades, \gf
+%     \item 3\hearts = \spades, \inv
+%     \item 3\spades = pre
+%     \item 4\clubs/4\diams = \nat + fit
+%     \item 4\hearts = splinter
+% \end{itemize}
 
-\subsubsection*{1\spades -- (3\clubs) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 3\diams = \hearts, \invp
-    \item 3\hearts = \spades, mini-maxi
-    \item 3\spades = \spades, \inv
-    \item 3\nt = to play
-    \item 4\clubs = slam try, no \clubs shortness
-    \item 4\diams = slam try, \clubs shortness
-    \item 4\hearts/4\spades = to play
-\end{itemize}
+% \subsubsection*{1\spades -- (3\clubs) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 3\diams = \hearts, \invp
+%     \item 3\hearts = \spades, mini-maxi
+%     \item 3\spades = \spades, \inv
+%     \item 3\nt = to play
+%     \item 4\clubs = slam try, no \clubs shortness
+%     \item 4\diams = slam try, \clubs shortness
+%     \item 4\hearts/4\spades = to play
+% \end{itemize}
 
-\subsubsection*{1\spades -- (3\diams) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 3\hearts = \spades, mini-maxi
-    \item 3\spades = \spades, \inv
-    \item 3\nt = to play
-    \item 4\clubs = slam try, no \diams shortness
-    \item 4\diams = slam try, \diams shortness
-    \item 4\hearts/4\spades = to play
-\end{itemize}
+% \subsubsection*{1\spades -- (3\diams) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 3\hearts = \spades, mini-maxi
+%     \item 3\spades = \spades, \inv
+%     \item 3\nt = to play
+%     \item 4\clubs = slam try, no \diams shortness
+%     \item 4\diams = slam try, \diams shortness
+%     \item 4\hearts/4\spades = to play
+% \end{itemize}
 
-\subsubsection*{1\spades -- (3\hearts) -- ?}
-\begin{itemize}
-    \item \dbl = take out
-    \item 3\spades = competitive
-    \item 3\nt = to play
-    \item 4\clubs = slam try, no \diams shortness
-    \item 4\diams = slam try, \diams shortness
-    \item 4\hearts = slam try, \hearts void
-    \item 4\spades = to play
-    \item 4\nt = minors
-\end{itemize}
+% \subsubsection*{1\spades -- (3\hearts) -- ?}
+% \begin{itemize}
+%     \item \dbl = take out
+%     \item 3\spades = competitive
+%     \item 3\nt = to play
+%     \item 4\clubs = slam try, no \diams shortness
+%     \item 4\diams = slam try, \diams shortness
+%     \item 4\hearts = slam try, \hearts void
+%     \item 4\spades = to play
+%     \item 4\nt = minors
+% \end{itemize}
 
 %%% SYSTEM END %%%
 
