--- a/KrysiaBartek2024/source/otherBidsAndRules.tex
+++ b/KrysiaBartek2024/source/otherBidsAndRules.tex
@@ -86,12 +86,20 @@
 \end{itemize}
 
 \subsubsection*{...5\anysuit{x} -- ?}
-5\anysuit{x} = query kings
+5\anysuit{x} = query kings, \major agreed
 \begin{itemize}
     \item agreed suit = no kings
     \item 5\anysuit{x}+1 = lowest side-suit king or two other kings
     \item 5\anysuit{x}+2 = middle side-suit king or two other kings
     \item 5\anysuit{x}+3 = highest side-suit king or two other kings
+\end{itemize}
+
+\subsubsection*{...5\anysuit{x} -- ?}
+5\anysuit{x} = query kings, \minor agreed
+\begin{itemize}
+    \item 5\anysuit{x}+1 = 0 kings
+    \item 5\anysuit{x}+2 = 1 king
+    ...
 \end{itemize}
 
 
