--- a/KrysiaBartek2024/source/transfers1MX.tex
+++ b/KrysiaBartek2024/source/transfers1MX.tex
@@ -10,9 +10,9 @@
 \maketitle
 
 %%% ID: 19
-%%% PRIORITY: 109
+%%% PRIORITY: 68
 %%% SECTION: competitive
-%%% TITLE: Transfers after 1\major\ (\dbl)
+%%% TITLE: 1\major\ (\dbl)
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\hearts -- (\dbl) -- ?}
