--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -14,39 +14,39 @@
 \newcommand{\bal}{\textsc{bal}\xspace}
 \newcommand{\nat}{\textsc{nat}\xspace}
 \newcommand{\unbal}{\st{\textsc{bal}}\xspace}
-\newcommand{\gf}{\color{BrickRed}\textbf{GF}\color{black}\xspace}
-\newcommand{\nf}{\color{Green}\textbf{NF}\color{black}\xspace}
-\newcommand{\forc}{\color{RedViolet}\textbf{F}\color{black}\xspace}
-\newcommand{\fonce}{\color{RedViolet}\textbf{F1}\color{black}\hspace{4pt}\xspace}
-\newcommand{\fton}[1]{\color{RedViolet}\textbf{F}\color{black}\xspace to {#1}}
+\newcommand{\gf}{{\color{BrickRed}\textbf{GF}}\xspace}
+\newcommand{\nf}{{\color{Green}\textbf{NF}}\xspace}
+\newcommand{\forc}{{\color{RedViolet}\textbf{F}}\xspace}
+\newcommand{\fonce}{{\color{RedViolet}\textbf{F1}}\hspace{4pt}\xspace}
+\newcommand{\fton}[1]{{\color{RedViolet}\textbf{F}}\xspace to {#1}}
 \newcommand{\trsf}[1]{\textsc{trsf}\xspace to {#1}}
-\newcommand{\inv}{\color{PineGreen}\textbf{INV}\color{black}\xspace}
-\newcommand{\invp}{\color{Blue}\textbf{INV$^+$}\color{black}\xspace}
-\newcommand{\slamtry}{\color{WildStrawberry}\textbf{Slam Try}\color{black}\hspace{4pt}}
-\newcommand{\minor}{\color{OliveGreen}\ding{168}\hspace{-3pt}\color{BurntOrange}\ding{169}\color{black}\xspace}
-\newcommand{\major}{\color{Maroon}\ding{170}\hspace{-3pt}\color{Blue}\ding{171}\color{black}\xspace}
+\newcommand{\inv}{{\color{PineGreen}\textbf{INV}}\xspace}
+\newcommand{\invp}{{\color{Blue}\textbf{INV$^+$}}\xspace}
+\newcommand{\slamtry}{{\color{WildStrawberry}\textbf{Slam Try}}\hspace{4pt}}
+\newcommand{\minor}{{\color{OliveGreen}\ding{168}\hspace{-3pt}\color{BurntOrange}\ding{169}}\xspace}
+\newcommand{\major}{{\color{Maroon}\ding{170}\hspace{-3pt}\color{Blue}\ding{171}}\xspace}
 \newcommand{\passx}{{\small{PASS}}}
-\newcommand{\stopp}{\color{Maroon}\textsc{stop}\color{black}\hspace{4pt}}
+\newcommand{\stopp}{{\color{Maroon}\textsc{stop}}\hspace{4pt}}
 \newcommand{\enemy}[1]{(#1)}
-\newcommand{\dbl}{\color{Red}$\bm{\times}$\color{black}\xspace}
-\newcommand{\rdbl}{\color{Blue}$\bm{\times\!\times}$\color{black}\xspace}
-\newcommand{\alert}{\color{Cyan}\textsc{alert}\color{black}\hspace{4pt}\xspace}
+\newcommand{\dbl}{{\color{Red}$\bm{\times}$}\xspace}
+\newcommand{\rdbl}{{\color{Blue}$\bm{\times\!\times}$}\xspace}
+\newcommand{\alert}{{\color{Cyan}\textsc{alert}}\hspace{4pt}\xspace}
 \newcommand{\conventional}[1]{\textbf{#1*}}
 \newcommand{\dealnr}[1]{\Large\textbf{#1}}
 \newcommand{\dealer}[1]{\fbox{#1}}
-\newcommand{\alrt}{\color{ProcessBlue}$^A$\color{black}}
-\newcommand{\soff}{\color{CadetBlue}\textsc{sign-off}\color{black}\xspace}
-\newcommand{\mixed}{\color{Fuchsia}\textbf{Mixed raise}\color{black}}
-\newcommand{\ns}{\color{BurntOrange}\textbf{Non-Serious}\color{black}}
-\newcommand{\lsf}{\color{WildStrawberry}\textbf{ASK LSF}\color{black}}
-\newcommand{\leb}{\color{CadetBlue}\textbf{LEB}\color{black}}
+\newcommand{\alrt}{{\color{ProcessBlue}$^A$}}
+\newcommand{\soff}{{\color{CadetBlue}\textsc{sign-off}}\xspace}
+\newcommand{\mixed}{{\color{Fuchsia}\textbf{Mixed raise}}}
+\newcommand{\ns}{{\color{BurntOrange}\textbf{Non-Serious}}}
+\newcommand{\lsf}{{\color{WildStrawberry}\textbf{ASK LSF}}}
+\newcommand{\leb}{{\color{CadetBlue}\textbf{LEB}}}
 \newcommand*\link[1]{\hspace*{0em plus 1fill}\makebox{#1}}
-\newcommand{\imp}{\color{BurntOrange}\link{\textbf{\large!}}\color{black}}
-\newcommand{\vimp}{\color{OrangeRed}\link{\textbf{\large{!!}}}\color{black}}
-\newcommand{\exq}{\color{JungleGreen}\link{\textbf{\large{?!}}}\color{black}}
-\newcommand{\qq}{\color{Fuchsia}\link{\textbf{\large{?}}}\color{black}}
-\newcommand{\addhcp}[1]{\color{JungleGreen}\link{\textbf{\large{#1}}}\color{black}}
-\newcommand{\anysuit}[1]{\color{PineGreen}{\textbf{{#1}}}\color{black}\xspace}
+\newcommand{\imp}{{\color{BurntOrange}\link{\textbf{\large!}}}}
+\newcommand{\vimp}{{\color{OrangeRed}\link{\textbf{\large{!!}}}}}
+\newcommand{\exq}{{\color{JungleGreen}\link{\textbf{\large{?!}}}}}
+\newcommand{\qq}{{\color{Fuchsia}\link{\textbf{\large{?}}}}}
+\newcommand{\addhcp}[1]{{\color{JungleGreen}\link{\textbf{\large{#1}}}}}
+\newcommand{\anysuit}[1]{{\color{PineGreen}{\textbf{{#1}}}}\xspace}
 \newcommand{\mins}{\textbf{m}\xspace}
 \newcommand{\majs}{\textbf{\small{M}}\xspace}
 \newcommand{\then}{$\rightarrow$\xspace}
