--- a/lib/common.sty
+++ b/lib/common.sty
@@ -37,13 +37,13 @@
     \xspaceremoveexception{-}
     \xspaceaddexceptions{+}
 
-    \newcommand{\clubs}{\color{OliveGreen}\ding{168}\color{black}\xspace}
-    \newcommand{\diams}{\color{BurntOrange}\ding{169}\color{black}\xspace}
-    \newcommand{\hearts}{\color{Maroon}\ding{170}\color{black}\xspace}
-    \newcommand{\spades}{\color{Blue}\ding{171}\color{black}\xspace}
+    \newcommand{\clubs}{{\color{OliveGreen}\ding{168}}\xspace}
+    \newcommand{\diams}{{\color{BurntOrange}\ding{169}}\xspace}
+    \newcommand{\hearts}{{\color{Maroon}\ding{170}}\xspace}
+    \newcommand{\spades}{{\color{Blue}\ding{171}}\xspace}
 
-    \newcommand{\vul}[1]{\color{Maroon}\textbf{#1}\color{black}}
-    \newcommand{\nvul}[1]{\color{OliveGreen}\textbf{#1}\color{black}}
+    \newcommand{\vul}[1]{{\color{Maroon}\textbf{#1}}}
+    \newcommand{\nvul}[1]{{\color{OliveGreen}\textbf{#1}}}
 
     \newcommand{\we}{
         \begin{varwidth}{0.20\linewidth}
