--- a/KrysiaBartek2024/source/1dOpening.tex
+++ b/KrysiaBartek2024/source/1dOpening.tex
@@ -4,30 +4,16 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{1\minor opening}
+\title{1\diams opening}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
-%%% ID: 1
-%%% PRIORITY: 5
+%%% ID: 60
+%%% PRIORITY: 2
 %%% SECTION: oneside
-%%% TITLE: 1{\color{OliveGreen}\ding{168}\hspace{-3pt}\color{BurntOrange}\ding{169}}\ opening
+%%% TITLE: 1\diams\ opening
 %%% SYSTEM BEGIN %%%
-
-\subsubsection*{1\clubs\ -- ?}
-\begin{itemize}
-    \item 1\diams\ = negative
-    \item 1\hearts\ = 4+\hearts
-    \item 1\spades\ = 4+\spades
-    \item 1\nt = 7-10, no 4\major
-    \item 2\clubs\ = \gf
-    \item 2\diams\ = 5+\diams, \gf, may have 4\major
-    \item 2\hearts\ = 5\spades4\hearts\ 6-9
-    \item 2\spades\ = 11+ \bal, no 4\major
-    \item 2\ntx\ = 11-12 \bal
-    \item 3\nt\ = 15-17 \bal
-\end{itemize}
 
 \subsubsection*{1\diams\ -- ?}
 \begin{itemize}
@@ -40,27 +26,6 @@
     \item 2\spades\ = 11+ \bal, no 4\major
     \item 2\nt = 11-12 \bal
     \item 3\nt = 15-17 \bal
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\hearts/1\spades \\ ?}
-\begin{itemize}
-    \item 2\clubs = 5+\clubs, 12-15 \unbal
-    \item 3\clubs = 6+\clubs, (15)16-18 \unbal
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\hearts \\ 
-                2\clubs -- ?}
-\begin{itemize}
-    \item 2\diams = \gf (\then all \nat)
-    \item 2\spades/2\nt = \inv art (bids above 3\clubs = accept)
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 1\spades \\ 
-                2\clubs -- ?}
-\begin{itemize}
-    \item 2\diams = \gf
-    \item 2\hearts = \inv \nat
-    \item 2\nt = \inv (bids above 3\clubs = accept)
 \end{itemize}
 
 \subsubsection*{1\diams -- 1\hearts\\ ?}
@@ -122,26 +87,6 @@
     \item 3\spades = 3\spades max
 \end{itemize}
 
-\subsubsection*{1\clubs\ -- 2\clubs \\ ?}
-\begin{itemize}
-    \item 2\diams\ = \bal
-    \item 2\hearts\ = 5\clubs4\hearts\ \unbal
-    \item 2\spades\ = 5\clubs4\spades\ \unbal
-    \item 2\nt\ = 5\clubs4\diams\ \unbal
-    \item 3\clubs\ = \clubs\ \unbal
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 2\clubs \\
-                2\diams -- ?}
-\begin{itemize}
-    \item 2\hearts = 5\clubs4\hearts\ \unbal
-    \item 2\spades = 5\clubs4\spades\ \unbal
-    \item 2\nt = 12-14/18+ \bal
-    \item 3\clubs = 6\clubs, no 4\major
-    \item 3\diams = 5\clubs4\diams, \gf
-    \item 3\nt = 15-17 \bal
-\end{itemize}
-
 \subsubsection*{1\diams\ -- 2\diams \\ ?}
 \begin{itemize}
     \item 2\hearts\ = \hearts\ stopper
@@ -153,21 +98,6 @@
 
 bidding higher suit denies lower stopper
 
-\subsubsection*{1\minor\ -- 2\hearts \\ ?}
-\begin{itemize}
-    \item 2\nt\ = \lsf \vimp
-\end{itemize}
-
-\subsubsection*{1\clubs\ -- 2\spades \\ ?}
-\begin{itemize}
-    \item 2\nt\ = \bal min
-    \item 3\clubs\ = 5+\clubs min
-    \item 3\diams\ = 5+\clubs \gf
-    \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
-    \item 3\spades\ = 1-\spades, 5+\clubs\ \gf
-    \item 3\nt\ = to play
-\end{itemize}
-
 \subsubsection*{1\diams\ -- 2\spades \\ ?}
 \begin{itemize}
     \item 2\nt\ = \bal min
@@ -178,18 +108,6 @@ bidding higher suit denies lower stopper
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{Two way checkback}
-
-After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
-1\clubs -- 1\diams = negative).
-
-\subsubsection*{1\anysuit{x}\ -- 1\anysuit{y} \\ 1\anysuit{z} -- ?}
-\begin{itemize}
-    \item 2\clubs\ = any invite, forces 2\diams
-    \item 2\diams\ = any \gf
-\end{itemize}
-
 %%% SYSTEM END %%%
-
 
 \end{document}
