--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -50,6 +50,7 @@
 \newcommand{\mins}{\textbf{m}\xspace}
 \newcommand{\majs}{\textbf{\small{M}}\xspace}
 \newcommand{\then}{$\rightarrow$\xspace}
+\newcommand{\orr}{\quad|\quad}
 
 % Provide 2 suits as arguments, ex. \twosuit{\spades}{\diams}.
 % The command will produce suit characters slightly overlapped.
