--- a/lib/common.sty
+++ b/lib/common.sty
@@ -41,6 +41,10 @@
     \newcommand{\diams}{\color{BurntOrange}\ding{169}\color{black}\xspace}
     \newcommand{\hearts}{\color{Maroon}\ding{170}\color{black}\xspace}
     \newcommand{\spades}{\color{Blue}\ding{171}\color{black}\xspace}
+    \newcommand{\xclubs}{\color{OliveGreen}\ding{168}\color{black}}
+    \newcommand{\xdiams}{\color{BurntOrange}\ding{169}\color{black}}
+    \newcommand{\xhearts}{\color{Maroon}\ding{170}\color{black}}
+    \newcommand{\xspades}{\color{Blue}\ding{171}\color{black}}
 
     \newcommand{\vul}[1]{\color{Maroon}\textbf{#1}\color{black}}
     \newcommand{\nvul}[1]{\color{OliveGreen}\textbf{#1}\color{black}}
