--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -44,7 +44,7 @@
 \newcommand{\imp}{{\color{BurntOrange}\link{\textbf{\large!}}}}
 \newcommand{\vimp}{{\color{OrangeRed}\link{\textbf{\large{!!}}}}}
 \newcommand{\exq}{{\color{JungleGreen}\link{\textbf{\large{?!}}}}}
-\newcommand{\qq}{{\color{Fuchsia}\link{\textbf{\large{?}}}}}
+\newcommand{\qq}{{\color{WildStrawberry}\link{\textbf{\large{?}}}}}
 \newcommand{\addhcp}[1]{{\color{JungleGreen}\link{\textbf{\large{#1}}}}}
 \newcommand{\anysuit}[1]{{\color{PineGreen}{\textbf{{#1}}}}\xspace}
 \newcommand{\mins}{\textbf{m}\xspace}
