--- a/KrysiaBartek2024/source/1MOpening_KacperVersion.tex
+++ b/KrysiaBartek2024/source/1MOpening_KacperVersion.tex
@@ -9,7 +9,7 @@
 \begin{document}
 \maketitle
 
-%%% ID: 23
+%%% ID: 64
 %%% PRIORITY: 10
 %%% SECTION: oneside
 %%% TITLE: 1{\color{Maroon}\ding{170}\hspace{-3pt}\color{Blue}\ding{171}}\ opening
@@ -18,15 +18,15 @@
 \subsubsection*{1\hearts -- ?}
 \begin{itemize}
     \item 1\spades = 4+\spades, no 3\hearts OR 5\spades3\hearts + \gf
-    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3 \hearts)
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3\hearts)
     \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = constructive raise
-    \item 2\spades = mini splinter
+    \item 2\spades = \spades preempt (3-7, 6+\spades)
     \item 2\nt = limit raise
-    \item 3\clubs = solid 6\clubs, \inv
-    \item 3\diams = solid 6\diams, \inv
-    \item 3\hearts = mixed raise
+    \item 3\clubs = mixed raise
+    \item 3\diams = mini splinter (3\hearts = \lsf)
+    \item 3\hearts = preempt
     \item 3\spades = splinter \spades
     \item 3\nt = splinter \diams
     \item 4\clubs = splinter \clubs
@@ -36,19 +36,18 @@
 
 \subsubsection*{1\spades -- ?}
 \begin{itemize}
-    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3 \spades)
+    \item 1\nt = 5-11\hcp, (or 5-7\hcp with 2-3\spades)
     \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = 5\hearts, \gf
     \item 2\spades = constructive raise
-    \item 2\nt = mini splinter
-    \item 3\clubs = solid 6\clubs, \inv
-    \item 3\diams = solid 6\diams, \inv
-    \item 3\hearts = 3+\spades, \inv
-    \item 3\spades = mixed raise
+    \item 2\nt = limit raise
+    \item 3\clubs = mixed raise
+    \item 3\diams = mini splinter (3\hearts = \lsf)
+    \item 3\hearts = solid 6\hearts, \inv
+    \item 3\spades = preempt
     \item 3\nt = splinter \hearts
-    \item 4\clubs = splinter \clubs
-    \item 4\diams = splinter \diams
+    \item 4\clubs/4\diams = splinter
     \item 4\hearts = 11\hcp, 4\spades, no shortness
 \end{itemize}
 
