--- a/KrysiaBartek2024/source/1mX.tex
+++ b/KrysiaBartek2024/source/1mX.tex
@@ -15,7 +15,32 @@
 %%% TITLE: 1\minor\ (\dbl)
 %%% SYSTEM BEGIN %%%
 
-TODO
+\begin{bidpage}
+\subsubsection*{1\clubs -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\diams/1\hearts/1\spades = 7+\hcp, 4+
+    \item 1\nt = 7-11
+    \item 2\clubs/2\diams/2\hearts/2\spades = transfer to \diams/\hearts/\spades/\clubs 6+, weak/\gf
+    \item 2\nt = \minor weak/\gf
+    \item 3\clubs/3\diams = \inv
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{1\diams -- (\dbl) -- ?}
+\begin{itemize}
+    \item \rdbl = 10+
+    \item 1\hearts/1\spades = 7+\hcp, 4+
+    \item 1\nt = 7-11
+    \item 2\clubs = \diams raise weak/\gf
+    \item 2\diams/2\hearts/2\spades = transfer to \hearts/\spades/\clubs 6+, weak/\gf
+    \item 2\spades = 6+\clubs weak/\gf
+    \item 2\nt = 4+\diams, \invp
+    \item 3\clubs = \inv
+    \item 3\diams = preempt
+\end{itemize}
+\end{bidpage}
 
 %%% SYSTEM END %%%
 
