--- a/lib/envs.sty
+++ b/lib/envs.sty
@@ -26,6 +26,10 @@
     \vspace{2pt}\end{adjustwidth}\endMakeFramed%
     }
 
+    \newenvironment{bidpage}
+        {\begin{minipage}{\textwidth}\setstretch{1.5}}
+        {\end{minipage}\vspace{1.1em}}
+
     % The command creates the vertically centered bidding table.
     \newcommand{\allbidding}[1]{
         \begin{table}[h!]
