--- a/KrysiaBartek2024/others/strefujot.tex
+++ b/KrysiaBartek2024/others/strefujot.tex
@@ -17,10 +17,6 @@
 \renewcommand{\thesection}{\arabic{section}}
 \renewcommand{\lsf}{{\color{BrickRed}\textbf{ASK LSF}}}
 
-\newenvironment{myminipage}
-  {\begin{minipage}{\textwidth}\setstretch{1.5}}
-  {\end{minipage}\vspace{1.5em}}
-
 \begin{document}
 \begin{titlepage}
     \centering
@@ -32,23 +28,23 @@
     {\Large Krysia i Bartek\\}
 \end{titlepage}
 
-\begin{myminipage}
+\begin{bidpage}
 \section{LSF}
 
 \lsf: answering Lowest Shortness First, `no shortness' last\\
 lo / me / hi / no
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \section{Negat}
 
 \subsubsection*{1\clubs -- ?}
 \begin{itemize}
     \item 1\diams\ = any 0-6 or 7-10 w/o 4\major
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs -- 1\diams\\
                 ?}
 \begin{itemize}
@@ -59,9 +55,9 @@ lo / me / hi / no
     \item 2\nt = 23-24 \bal, \nf
     \item 2\hearts = Kokish relay
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \section{Strefodwrotka}
 
 \subsubsection*{1\clubs\ -- 1\major\\
@@ -70,18 +66,18 @@ lo / me / hi / no
     \item 2\diams = any 3+ support \gf
     \item 2\nt = 5\clubs4\diams or \bal\ \gf (= 2\hearts)
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\major\\
                 2\diams -- ?}
 \begin{itemize}
     \item 2\hearts = agreeing \major (5+), relay
     \item 2\spades = 4\major, relay
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\major\\
                 2\diams -- 2\hearts\\
                 ?}
@@ -91,9 +87,9 @@ lo / me / hi / no
 \end{itemize}
 
 * may answer cue with no shortness or fast arrival with no slam interest
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\major\\
                 2\diams -- 2\spades\\
                 ?}
@@ -104,17 +100,17 @@ lo / me / hi / no
     \item 3\hearts = 6\clubs3\hearts
     \item 3\spades = 4333\hearts (3\nt = \soff)
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\hearts\\
                 2\nt -- ?}
 \begin{itemize}
     \item 3\clubs = relay
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\hearts\\
                 2\nt -- 3\clubs\\
                 ?}
@@ -124,9 +120,9 @@ lo / me / hi / no
     \item 3\spades = 5\clubs4\diams, \spades shortness
     \item 3\nt = 5\clubs4\diams, no shortness
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \section{Precision}
 
 2\clubs = 11-15 5\clubs4\major or 6+\clubs
@@ -140,9 +136,9 @@ lo / me / hi / no
     \item 3\diams/3\hearts/3\spades = \inv, 6+
     \item 3\nt = 12-15, no 4\major
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{2\clubs\ -- 2\diams\\
                 ?}
 \begin{itemize}
@@ -150,27 +146,27 @@ lo / me / hi / no
     \item 2\nt = no 4\major, 6+\clubs, \gf
     \item 3\clubs = no 4\major, 6+\clubs, minimum
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{2\clubs\ -- 2\nt\\
                 3\clubs -- ?}
 \begin{itemize}
     \item \pass = \clubs preempt
     \item 3\diams/3\hearts/3\spades = 2-suiter \qq
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{2\clubs\ -- 3\clubs\\
                 ?}
 \begin{itemize}
     \item \pass/3\nt = to play
     \item 3\diams/3\hearts/3\spades = values, \fton{4\clubs}
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \section{Acol}
 
 1\clubs = [...], 23+ \hcp or 9.5 winning tricks
@@ -183,33 +179,33 @@ lo / me / hi / no
     \item 2\nt = 23-24 \bal
     \item 3\clubs = acol \diams
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\hearts\\
                 ?}
 \begin{itemize}
     \item 3\clubs = acol \diams
     \item 3\diams = acol \spades
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\spades\\
                 ?}
 \begin{itemize}
     \item 3\clubs = acol \diams
     \item 3\diams = acol \hearts
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
-\begin{myminipage}
+\begin{bidpage}
 \subsubsection*{1\clubs\ -- 1\nt\\
                 ?}
 \begin{itemize}
     \item 2\major = acol \major \then relay + transfers
     \item 2\nt = 23-24 \bal
 \end{itemize}
-\end{myminipage}
+\end{bidpage}
 
 \end{document}
